fix: Bug with overlap at the top in iOS

--- a/src/ui/style.scss
+++ b/src/ui/style.scss
@@ -17,3 +17,9 @@ code {
 p {
     color: var(--ion-color-secondary);
 }
+
+.ion-app {
+    --safe-area-inset-top: env(safe-area-inset-top);
+    --safe-area-inset-bottom: env(safe-area-inset-bottom);
+    height: calc(100% + (var(--safe-area-inset-top) + var(--safe-area-inset-bottom)));
+}
